<resources>
    <string name="app_name">Cam e-Mall</string>
    <string name="open_drawer">Open drawer...</string>
    <string name="close_drawer">Close drawer...</string>
    <string name="gallery">Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="sample_product_description">
            Fresh milk is a natural high-quality product of Dream Farm,
        a leading cow farm and milk production factory in Cambodia.
    </string>
    <string name="black_burger">

    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="location_and_maps">Location &amp; Maps</string>
    <string name="sub_header">Action Menu</string>
    <string name="sale_product">Add Product To Store</string>
    <string name="sign_out">Sign out</string>
    <string name="view_on_maps">view on maps</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="skip"><![CDATA[Skip >>]]></string>
    <string name="company_name">Company Name</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="next"><![CDATA[Next >>]]></string>
    <string name="submit"><![CDATA[Submit >>]]></string>
    <string name="product_description">Description(Optional)</string>
</resources>
