<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="42dp"
            android:paddingTop="8dp"
            android:paddingEnd="42dp"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:text="Company Information"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etCompanyName"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/railway"
                android:hint="@string/company_name"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <EditText
                android:id="@+id/etTelephone"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/railway"
                android:hint="@string/telephone"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/etCompanyName"
                app:layout_constraintStart_toStartOf="@id/etCompanyName"
                app:layout_constraintTop_toBottomOf="@id/etCompanyName" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/railway"
                android:hint="@string/email"
                android:paddingStart="8dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/etTelephone"
                app:layout_constraintStart_toStartOf="@id/etTelephone"
                app:layout_constraintTop_toBottomOf="@id/etTelephone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/fui_transparent"
                    android:text="@string/back"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@color/fui_transparent"
                    android:text="@string/next"
                    android:textSize="14sp" />
            </RelativeLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>